# prefect-executor

./: .env.sample  README.md  docker-compose.yml  minio_test.py  pyproject.toml
executor/: requirements.txt  set-up-executor.sh
executor/flows/: minio_flow.py  test_flow.py
utils/: configuration.py
