[tool.poetry]
name = "executor"
version = "0.1.0"
description = ""
authors = ["John Smith <john@example.com>"]
readme = "README.md"
packages = [{include = "executor"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pyodbc = "^4.0.39"
sqlalchemy = "^2.0.20"
psycopg2 = "^2.9.7"
omegaconf = "^2.3.0"
prefect = "2.13.4"
minio = "^7.1.17"
pandas = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
